# ELANsfml

./: .gitignore  CMakeLists.txt  build.sh  run.sh
ELANsfml/Apps/: AbstractApp.h
ELANsfml/Designs/: AbstractDesign.h
ELANsfml/Helpers/: Config.h  MonoFactory.h  Singleton.h
ELANsfml/Singletons/: AppManager.h  ELANsfml.h  EventHandler.h  Screen.h
ELANsfml/Singletons/src/: AppManager.cpp  ELANsfml.cpp  EventHandler.cpp  Screen.cpp
ELANsfml/Sprites/: AbstractSprite.h  BackgroundColor.h  Button.h  PlainText.h  TextInput.h  TextLabel.h
ELANsfml/Sprites/Functional/: ButtonFunctional.h  TextInputFunctional.h  TextLabelFunctional.h
ELANsfml/Sprites/Inheritance/: Activatable.h
ELANsfml/Sprites/src/: Background.cpp  Button.cpp  PlainText.cpp  TextInput.cpp  TextLabel.cpp
src/: main.cpp
src/Apps/: MainApp.h
src/Apps/src/: MainApp.cpp
src/Designs/: MainDesign.h
src/Designs/src/: MainDesign.cpp
